Fixed up Css made things centered and aligned  in ordely fashion

--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,26 @@
   text-decoration: line-through;
 }
 
-.container{
-  display: flex;
-  background-color: coral;
-  
-  
-}
-.list{
-  float: left;
-}
 
 *{
-  background-color: gray;
+  background-color: lightgray;
+}
+
+.app{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+.container{
+  display: flex;
+  justify-content:space-evenly ;
+  align-items: center;
+}
+.container2{
+  display: flex;
+}
+.title{
+  text-align: center;
 }
